--- a/ShopProductServer/appsettings.json
+++ b/ShopProductServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server =SANTIAGOGONZALE; Database=ProductShop; Trusted_Connection=True;MultipleActiveResultSets= True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
